--- a/embold-blue.com/company-news.html
+++ b/embold-blue.com/company-news.html
@@ -214,7 +214,7 @@
     </div>
   </section>
   <div id="ex1" class="modal modal-subscribe subscribe-email">
-    <h3>Join our newsletter</h3>
+    <h3><i class="far fa-envelope"></i><br />Join our newsletter</h3>
     <input type="text" placeholder="Your E-mail Address" class="input input-fw" />
     <div class="inline-input wrap-policy">
       <label class="wrap-checkbox-item">
@@ -226,7 +226,7 @@
     <button class="btn btn-md btn-default submit">Subscribe Now</button>
   </div>
   <div id="ex2" class="modal modal-subscribe subscribe-rss">
-    <h3>Follow RSS Feed</h3>
+    <h3><i class="fas fa-rss"></i><br />Follow RSS Feed</h3>
     <table class="table table-no-border rss-list">
       <tr>
         <td class="category-name">
