--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -49,53 +49,48 @@
           <h4>Workflow</h4>
           <h2>You have to only 4-steps<br />to embolden your codes</h2>
         </div>
-        <div class="col-3">
+        <div class="col-4 position-relative">
           <div class="wrap-workflow workflow-1">
-            <i class="icon ic-folder-add"></i>
-            <span class="step-number">1</span>
-            <h3 class="step-title">Create a Project</h3>
-            <p class="description">
-              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
-            </p>
-            <div class="workflow-flowline"></div>
-            <div class="workflow-flowcircle-right"></div>
+            <div class="wrap-animation">
+              <div class="logo-github item-logo"></div>
+              <div class="logo-bitbucket item-logo"></div>
+              <div class="logo-jenkins item-logo"></div>
+            </div>
+            <div class="wrap-text">
+              <span class="step-number">1</span>
+              <h3 class="step-title">Link Repositories</h3>
+              <p class="description">
+                Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-4 position-relative">
           <div class="wrap-workflow workflow-2">
-            <i class="icon ic-repository-link"></i>
-            <span class="step-number">2</span>
-            <h3 class="step-title">Link Repository</h3>
-            <p class="description">
-              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
-            </p>
-            <div class="workflow-flowcircle-left"></div>
-            <div class="workflow-flowline"></div>
-            <div class="workflow-flowcircle-right"></div>
+            <div class="wrap-animation">
+              <div class="logo-embold"></div>
+            </div>
+            <div class="wrap-text">
+              <span class="step-number">2</span>
+              <h3 class="step-title">Scan Your Repository</h3>
+              <p class="description">
+                Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-4 position-relative">
           <div class="wrap-workflow workflow-3">
-            <i class="icon ic-scan"></i>
-            <span class="step-number">3</span>
-            <h3 class="step-title">Scan Your Repository</h3>
-            <p class="description">
-              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
-            </p>
-            <div class="workflow-flowcircle-left"></div>
-            <div class="workflow-flowline"></div>
-            <div class="workflow-flowcircle-right"></div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="wrap-workflow workflow-4">
-            <i class="icon ic-report"></i>
-            <span class="step-number">4</span>
-            <h3 class="step-title">Get the Report</h3>
-            <p class="description">
-              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
-            </p>
-            <div class="workflow-flowcircle-left"></div>
+            <div class="wrap-animation">
+              <div class="index-step-3 item-logo"></div>
+            </div>
+            <div class="wrap-text">
+              <span class="step-number">3</span>
+              <h3 class="step-title">Get Your Report</h3>
+              <p class="description">
+                Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -298,14 +293,27 @@
       </div>
     </div>
   </section>
-  <div class="container-fluid bg-orange">
-    <div class="container block">
+  <div class="container-fluid block-footer-contact bg-orange">
+    <div class="bg-fw-half-left bg-color-gray800"></div>
+    <div class="bg-fw-half-right bg-color-orange800"></div>
+    <div class="container-fluid block">
       <div class="row">
-        <div class="col-12 text-center">
+        <div class="col-6 text-center">
+          <h4>Sign-Up</h4>
+          <h2>It is Free!</h2>
+          <p>
+            Embold is free for open source projects.<br />
+            Multiple cloud or on-premise plans are available.<br />
+            for commercial projects.
+          </p>
+          <button class="btn btn-dark btn-md btn-more" onclick="window.location.href='./resources-product.html'">Choose Plan</button>
+        </div>
+        <div class="col-6 text-center">
           <h4>Contact us</h4>
-          <h2>Still Need more help?</h2>
+          <h2>Need help?</h2>
           <p class="block-description">
-            We are always wating your interestings about embold.<br />Please don’t hesitate to contact us.
+            Do you have a question?<br />
+            Or need help to get started?
           </p>
           <button class="btn btn-default btn-md btn-more" onclick="window.location.href='./resources-product.html'">Find out Documentation</button>
         </div>
