첫화면 변경

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -27,14 +27,14 @@
     <div class="header-image bg-index-hero"></div>
     <div class="container block block-hero">
       <div class="row">
-        <div class="col-12">
+        <div class="col-6">
           <div class="wrap-hero-content">
-            <h1 class="headcopy">You can Improve your codes through EMBOLD</h1>
+            <h1 class="headcopy">Truth is in your<br /><strong>Code DNA</strong></h1>
             <p class="description">
-              When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract.
+              Drive productivity and cost by managing the DNA of your code.<br />
+              AI assisted multi-dimensional software analytics for human beings!
             </p>
             <div class="wrap-sign-up">
-              <input class="input inline-input" type="text" placeholder="Type your E-mail Address" />
               <button class="btn btn-orange btn-md inline-input">Sign-Up</button>
             </div>
           </div>
@@ -82,7 +82,9 @@
         <div class="col-4 position-relative">
           <div class="wrap-workflow workflow-3">
             <div class="wrap-animation">
-              <div class="index-step-3 item-logo"></div>
+              <div class="index-step-3 item-logo">
+                <object type="image/svg+xml" data="images/index-step-3.svg"></object>
+              </div>
             </div>
             <div class="wrap-text">
               <span class="step-number">3</span>
