adding svg animation

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -83,7 +83,7 @@
           <div class="wrap-workflow workflow-3">
             <div class="wrap-animation">
               <div class="index-step-3 item-logo">
-                <object type="image/svg+xml" data="images/index-step-3.svg"></object>
+                <object type="image/svg+xml" data="images/index-step-3-animate.svg"></object>
               </div>
             </div>
             <div class="wrap-text">
@@ -383,6 +383,7 @@
       </div>
     </div>
   </div>
+  <div class="intercom"></div>
   <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
