Relocate Header-Hero-image

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -22,9 +22,14 @@
 </head>
 <body class="index">
   <div class="nav-index"></div>
-
+  <div class="container ">
+    <div class="row">
+      <div class="col-12" style="position: relative;">
+        <div class="header-image bg-index-hero"></div>
+      </div>
+    </div>
+  </div>
   <div class="container-fluid bg-light block-index-hero">
-    <div class="header-image bg-index-hero"></div>
     <div class="container block block-hero">
       <div class="row">
         <div class="col-6">
