--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-12">
           <h4>Workflow</h4>
-          <h2>You have to only 4-steps<br />to embolden your codes</h2>
+          <h2>1-2-3 and that's all it takes!</h2>
         </div>
         <div class="col-4 position-relative">
           <div class="wrap-workflow workflow-1">
@@ -98,6 +98,108 @@
                 Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container block block-index-features">
+    <div class="row">
+      <div class="col-12">
+        <h4>Features</h4>
+        <h2>Features that Matter</h2>
+      </div>
+      <div class="body-content">
+        <div class="col-6">
+          <div class="background-no-repeat il-index-features">
+          </div>
+        </div>
+        <div class="col-6">
+          <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+        </div>
+      </div>
+      <!-- <div class="col-12">
+        <div class="container-mosaic">
+          <div class="mosaic-item item-width-2 item-height-4">
+            <div class="content-wrap bg-color-blue">
+            <h3>Bug Prediction</h3>
+            </div>
+          </div>
+          <div class="mosaic-item item-width-2 item-height-2">
+            <div class="content-wrap bg-color-orange">
+              <h3>Recommendation Engine</h3>
+            </div>
+          </div>
+          <div class="mosaic-item item-width-4 item-height-1">
+            <div class="content-wrap bg-color-gray800">
+              <h3>Productivity Management</h3>
+            </div>
+          </div>
+          <div class="mosaic-item item-width-2 item-height-1">
+            <div class="content-wrap bg-color-blue">
+              <h3>Scoring and A.I. Base Priorization</h3>
+            </div>
+          </div>
+          <div class="mosaic-item item-width-2 item-height-2">
+            <div class="content-wrap bg-color-gray800">
+              <h3>Scoring and A.I. Base Priorization</h3>
+            </div>
+          </div>
+          <div class="mosaic-item item-width-2 item-height-2 item-height-m-1">
+            <div class="content-wrap bg-color-green">
+              <h3>Scoring and A.I. Base Priorization</h3>
+            </div>
+          </div>
+          <div class="mosaic-item item-width-2 item-height-2 item-height-m-1">
+            <div class="content-wrap bg-color-blue">
+              <h3>Scoring and A.I. Base Priorization</h3>
+            </div>
+          </div>
+          <div class="mosaic-item item-width-2 item-height-1">
+            <div class="content-wrap bg-color-blue">
+              <h3>Scoring and A.I. Base Priorization</h3>
+            </div>
+          </div>
+        </div>
+      </div> -->
+      <div class="col-12 text-center">
+        <button class="btn btn-default btn-md" onclick="window.location.href='./product-features.html'">Find out more Features</button>
+      </div>
+    </div>
+  </section>
+  <section class="block block-index-user-stories">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h4>Use Cases</h4>
+          <h2>Tailored for your use cases</h2>
+          <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+        </div>
+        <div class="col-4">
+          <div class="wrap-user photo-developer-1">
+            <h3 class="role">Developer</h3>
+            <p class="description">
+              I'm Java Developer in Valeo
+            </p>
+            <div class="link-arrow"></div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="wrap-user photo-manager-1">
+            <h3 class="role">Dev-Ops</h3>
+            <p class="description">
+              I'm Java Developer in Valeo
+            </p>
+            <div class="link-arrow"></div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="wrap-user photo-dev-ops-1">
+            <h3 class="role">Project Manager</h3>
+            <p class="description">
+              I'm Lead Project Manager in Toyota, Japan
+            </p>
+            <div class="link-arrow"></div>
           </div>
         </div>
       </div>
@@ -159,109 +261,7 @@
       </div>
     </div>
   </section>
-  <section class="block block-index-user-stories">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h4>Solutions</h4>
-          <h2>Listen Success Stories</h2>
-          <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-        </div>
-        <div class="col-4">
-          <div class="wrap-user photo-developer-1">
-            <h3 class="role">Developer</h3>
-            <p class="description">
-              I'm Java Developer in Valeo
-            </p>
-            <div class="link-arrow"></div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="wrap-user photo-manager-1">
-            <h3 class="role">Dev-Ops</h3>
-            <p class="description">
-              I'm Java Developer in Valeo
-            </p>
-            <div class="link-arrow"></div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="wrap-user photo-dev-ops-1">
-            <h3 class="role">Project Manager</h3>
-            <p class="description">
-              I'm Lead Project Manager in Toyota, Japan
-            </p>
-            <div class="link-arrow"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-index-features">
-    <div class="row">
-      <div class="col-12">
-        <h4>Features</h4>
-        <h2>Find Our Strength</h2>
-      </div>
-      <div class="body-content">
-        <div class="col-6">
-          <div class="background-no-repeat il-index-features">
-          </div>
-        </div>
-        <div class="col-6">
-          <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-        </div>
-      </div>
-      <!-- <div class="col-12">
-        <div class="container-mosaic">
-          <div class="mosaic-item item-width-2 item-height-4">
-            <div class="content-wrap bg-color-blue">
-            <h3>Bug Prediction</h3>
-            </div>
-          </div>
-          <div class="mosaic-item item-width-2 item-height-2">
-            <div class="content-wrap bg-color-orange">
-              <h3>Recommendation Engine</h3>
-            </div>
-          </div>
-          <div class="mosaic-item item-width-4 item-height-1">
-            <div class="content-wrap bg-color-gray800">
-              <h3>Productivity Management</h3>
-            </div>
-          </div>
-          <div class="mosaic-item item-width-2 item-height-1">
-            <div class="content-wrap bg-color-blue">
-              <h3>Scoring and A.I. Base Priorization</h3>
-            </div>
-          </div>
-          <div class="mosaic-item item-width-2 item-height-2">
-            <div class="content-wrap bg-color-gray800">
-              <h3>Scoring and A.I. Base Priorization</h3>
-            </div>
-          </div>
-          <div class="mosaic-item item-width-2 item-height-2 item-height-m-1">
-            <div class="content-wrap bg-color-green">
-              <h3>Scoring and A.I. Base Priorization</h3>
-            </div>
-          </div>
-          <div class="mosaic-item item-width-2 item-height-2 item-height-m-1">
-            <div class="content-wrap bg-color-blue">
-              <h3>Scoring and A.I. Base Priorization</h3>
-            </div>
-          </div>
-          <div class="mosaic-item item-width-2 item-height-1">
-            <div class="content-wrap bg-color-blue">
-              <h3>Scoring and A.I. Base Priorization</h3>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <div class="col-12 text-center">
-        <button class="btn btn-default btn-md" onclick="window.location.href='./product-features.html'">Find out more Features</button>
-      </div>
-    </div>
-  </section>
-  <section class="block-index-user-role block">
+  <!-- <section class="block-index-user-role block">
     <div class="bg-fw-half-left bg-color-gray800"></div>
     <div class="bg-fw-half-right bg-color-orange800"></div>
     <div class="container">
@@ -280,8 +280,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="container block">
+  </section> -->
+  <!-- <section class="container block">
     <div class="row">
       <div class="col-12">
         <h4>Team Embold</h4>
@@ -299,7 +299,7 @@
         <button class="btn btn-default btn-md" onclick="window.location.href='./company-about.html'">Read About Embold</button>
       </div>
     </div>
-  </section>
+  </section> -->
   <div class="container-fluid block-footer-contact bg-orange">
     <div class="bg-fw-half-left bg-color-gray800"></div>
     <div class="bg-fw-half-right bg-color-orange800"></div>
