--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -55,6 +55,7 @@
           <h2>1-2-3 and that's all it takes!</h2>
         </div>
         <div class="col-4 position-relative">
+          <div class="index-arrow arrow-1-2"></div>
           <div class="wrap-workflow workflow-1">
             <div class="wrap-animation">
               <div class="logo-github item-logo"></div>
@@ -71,6 +72,7 @@
           </div>
         </div>
         <div class="col-4 position-relative">
+          <div class="index-arrow arrow-1-2"></div>
           <div class="wrap-workflow workflow-2">
             <div class="wrap-animation">
               <div class="logo-embold"></div>
