tweak header design

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -340,11 +340,9 @@
         </div>
         <div class="col-2">
           <h4 class="footer-header-links">Product</h4>
-          <a href="#" class="nav-menu-link">Overview</a>
-          <a href="#" class="nav-menu-link">Features</a>
+          <a href="#" class="nav-menu-link">About Gamma</a>
           <a href="#" class="nav-menu-link">Use Cases</a>
           <a href="#" class="nav-menu-link">Pricing</a>
-          <a href="#" class="nav-menu-link">Partnership</a>
         </div>
         <div class="col-2">
           <h4 class="footer-header-links">Solutions</h4>
@@ -357,7 +355,6 @@
           <h4 class="footer-header-links">Resources</h4>
           <a href="#" class="nav-menu-link">Product</a>
           <a href="#" class="nav-menu-link">Download</a>
-          <a href="#" class="nav-menu-link">Media</a>
         </div>
         <div class="col-2">
           <h4 class="footer-header-links">Company</h4>
