developing mobile page

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/embold.css">
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/media-query.css">
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/simple-grid.css">
+  <link rel="stylesheet" href="https://use.typekit.net/cwa2ewg.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script
@@ -23,7 +24,7 @@
 </head>
 <body class="index">
   <div class="nav-index"></div>
-  <div class="container ">
+  <div class="container">
     <div class="row">
       <div class="col-12" style="position: relative;">
         <div class="header-image bg-index-hero"></div>
@@ -112,14 +113,11 @@
         <h4>Features</h4>
         <h2>Features that Matter</h2>
       </div>
-      <div class="body-content">
-        <div class="col-6">
-          <div class="background-no-repeat il-index-features">
-          </div>
-        </div>
-        <div class="col-6">
-          <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-        </div>
+      <div class="col-6">
+        <img src='images/il-index-features.png' width="100%" height="auto" />
+      </div>
+      <div class="col-6">
+        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <!-- <div class="col-12">
         <div class="container-mosaic">
@@ -247,16 +245,10 @@
           <div class="link-arrow"></div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12">
         <div class="background-no-repeat ic-logo-deutsche-leasing wrap-logo"></div>
-      </div>
-      <div class="col-3">
         <div class="background-no-repeat ic-logo-toyota wrap-logo"></div>
-      </div>
-      <div class="col-3">
         <div class="background-no-repeat ic-logo-valeo wrap-logo"></div>
-      </div>
-      <div class="col-3">
         <div class="background-no-repeat ic-logo-digit wrap-logo"></div>
       </div>
       <div class="col-12 text-center">
@@ -264,46 +256,7 @@
       </div>
     </div>
   </section>
-  <!-- <section class="block-index-user-role block">
-    <div class="bg-fw-half-left bg-color-gray800"></div>
-    <div class="bg-fw-half-right bg-color-orange800"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-6 block-index-user-role-item">
-          <h4 class="question">Who are you?</h4>
-          <h2 class="role-name">I’m a<br />Developer</h2>
-          <p class="description">See more embold’s features for Developer</p>
-          <div class="link-arrow"></div>
-        </div>
-        <div class="col-6 block-index-user-role-item">
-          <h4 class="question">Who are you?</h4>
-          <h2 class="role-name">I’m a<br />Product Manager</h2>
-          <p class="description font-wh">See more embold’s features for Product Manager or Dev-Ops</p>
-          <div class="link-arrow"></div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- <section class="container block">
-    <div class="row">
-      <div class="col-12">
-        <h4>Team Embold</h4>
-        <h2>We are Making the Future</h2>
-        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-      <div class="body-content">
-        <div class="col-12">
-          <div class="background-no-repeat il-index-locations">
-
-          </div>
-        </div>
-      </div>
-      <div class="col-12 text-center">
-        <button class="btn btn-default btn-md" onclick="window.location.href='./company-about.html'">Read About Embold</button>
-      </div>
-    </div>
-  </section> -->
-  <div class="container-fluid block-footer-contact bg-orange">
+  <!-- <div class="container-fluid block-footer-contact bg-orange">
     <div class="bg-fw-half-left bg-color-gray800"></div>
     <div class="bg-fw-half-right bg-color-orange800"></div>
     <div class="container-fluid block">
@@ -329,7 +282,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="container-fluid bg-light block-footer">
     <div class="container">
       <div class="row">
@@ -363,6 +316,42 @@
           <a href="#" class="nav-menu-link">Team</a>
           <a href="#" class="nav-menu-link">Careers</a>
           <a href="#" class="nav-menu-link">News</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-light block-footer-mobile">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <img src="images/logo-embold.svg" width="90" />
+        </div>
+        <div class="col-12">
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Product</h4>
+            <a href="#" class="nav-menu-link">About Gamma</a>
+            <a href="#" class="nav-menu-link">Use Cases</a>
+            <a href="#" class="nav-menu-link">Pricing</a>
+          </div>
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Solutions</h4>
+            <a href="#" class="nav-menu-link">By User Role</a>
+            <a href="#" class="nav-menu-link">By Team Size</a>
+            <a href="#" class="nav-menu-link">By Industry</a>
+            <a href="#" class="nav-menu-link">Solution Approach</a>
+          </div>
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Resources</h4>
+            <a href="#" class="nav-menu-link">Product</a>
+            <a href="#" class="nav-menu-link">Download</a>
+          </div>
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Company</h4>
+            <a href="#" class="nav-menu-link">About</a>
+            <a href="#" class="nav-menu-link">Team</a>
+            <a href="#" class="nav-menu-link">Careers</a>
+            <a href="#" class="nav-menu-link">News</a>
+          </div>
         </div>
       </div>
     </div>
